[package]
name = "crypt_of_the_rust_dancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "=11.1.3"
include_res = { path = "./includeres/" }

[dependencies.sdl2]
version = "0.35.2"
features = ["ttf"]